@@ -19,23 +19,21 @@ public class FirstName extends SimpleConverter {
     
     @Override
     public Object convert(Object value) throws ConversionException{
-        if (value == null)
-            throw new IllegalArgumentException("value is null");
-
-        String retVal = value.toString();        
-        List<Name> names = NameParser.parse(retVal, lastNameFirst);
         
-        if (!names.isEmpty()){
-            Name name = names.get(0);
-            if (name instanceof IndividualName){
-                retVal = ((IndividualName) name).getFirst();
-            }
-            else{
-                retVal = "";
+        String retVal = null;
+        
+        if (value != null){
+            List<Name> names = NameParser.parse(value.toString(), lastNameFirst);
+            retVal = "";
+            if (!names.isEmpty()){
+                Name name = names.get(0);
+                if (name instanceof IndividualName){
+                    retVal = ((IndividualName) name).getFirst();
+                }
             }
         }
         
-        return retVal == null ? "" : retVal;
+        return retVal;
     }
 
     public boolean isLastNameFirst() {
